--- a/book.html
+++ b/book.html
@@ -1,53 +1,52 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>资源详情页示例</title>
-  <meta name="description" content="免费开发者工具导航 - 收藏和邮件订阅示例">
-  <meta name="keywords" content="免费工具, 收藏, 邮件订阅">
-  <!-- 页面动画和延迟加载示意 -->
-  <style>
-    body { font-family: sans-serif; background:#111; color:#eee; padding:20px; }
-    a { color:#4af; text-decoration:none; }
-    a:hover { text-decoration:underline; }
-    .fade-in { opacity:0; animation:fadeIn 1s forwards; }
-    @keyframes fadeIn { to { opacity:1; } }
-    #bookmarkBtn, #subscribeBtn { padding:6px 12px; margin-top:8px; cursor:pointer; border-radius:4px; }
-    #bookmarkList span { margin-right:8px; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>分类页 Demo - Tailwind</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-50 text-gray-800 p-6">
 
   <!-- 面包屑导航 -->
-  <nav>
-    <a href="/">首页</a> &gt;
-    <a href="/free">资源分类</a> &gt;
-    <a href="/free/detail/">资源列表</a> &gt;
-    <span>当前资源名</span>
+  <nav class="text-sm text-gray-600 mb-6">
+    <a href="#" class="hover:underline">首页</a> 
+    <span class="mx-1">></span>
+    <a href="#" class="hover:underline">分类页</a>
+    <span class="mx-1">></span>
+    <span class="font-semibold text-gray-900">当前分类</span>
   </nav>
 
-  <h1 class="fade-in">资源详情 - 最小 MVP</h1>
+  <!-- 主分类 -->
+  <div class="flex flex-wrap gap-2 mb-6">
+    <button class="px-4 py-2 rounded-lg border bg-white hover:bg-gray-100">分类1</button>
+    <button class="px-4 py-2 rounded-lg border bg-white hover:bg-gray-100">分类2</button>
+    <button class="px-4 py-2 rounded-lg border bg-white hover:bg-gray-100">分类3</button>
+    <button class="px-4 py-2 rounded-lg border bg-white hover:bg-gray-100">分类4</button>
+    <button class="px-4 py-2 rounded-lg border bg-white hover:bg-gray-100">分类5</button>
+    <button class="px-4 py-2 rounded-lg border bg-white hover:bg-gray-100">分类6</button>
+    <button class="px-4 py-2 rounded-lg border bg-white hover:bg-gray-100">分类7</button>
+    <button class="px-4 py-2 rounded-lg border bg-white hover:bg-gray-100">分类8</button>
+    <button class="px-4 py-2 rounded-lg border bg-white hover:bg-gray-100">分类9</button>
+  </div>
 
-  <!-- 收藏功能 -->
-  <section class="fade-in">
-    <button id="bookmarkBtn">加入收藏</button>
-    <div id="bookmarkList"></div>
-  </section>
+  <!-- 子分类 -->
+  <div class="flex flex-wrap gap-2 mb-6">
+    <button class="px-3 py-1 text-sm rounded-full border bg-blue-50 text-blue-600 hover:bg-blue-100">子分类A1</button>
+    <button class="px-3 py-1 text-sm rounded-full border bg-blue-50 text-blue-600 hover:bg-blue-100">子分类A2</button>
+    <button class="px-3 py-1 text-sm rounded-full border bg-green-50 text-green-600 hover:bg-green-100">子分类B1</button>
+    <button class="px-3 py-1 text-sm rounded-full border bg-green-50 text-green-600 hover:bg-green-100">子分类B2</button>
+    <button class="px-3 py-1 text-sm rounded-full border bg-purple-50 text-purple-600 hover:bg-purple-100">子分类C1</button>
+    <button class="px-3 py-1 text-sm rounded-full border bg-purple-50 text-purple-600 hover:bg-purple-100">子分类C2</button>
+  </div>
 
-  <!-- 邮件订阅功能 -->
-  <section class="fade-in" style="margin-top:20px;">
-    <input type="email" id="subscribeEmail" placeholder="输入邮箱订阅">
-    <button id="subscribeBtn">订阅</button>
-    <div id="subscriptionMessage"></div>
-  </section>
-
-  <!-- 底部链接 -->
-  <footer class="fade-in" style="margin-top:40px;">
-    <a href="/sitemap">网站地图</a>
-  </footer>
-
-  <!-- 引入功能 JS -->
-  <script type="module" src="/main.js"></script>
+  <!-- 内容展示区域 -->
+  <div class="bg-white rounded-xl shadow p-6">
+    <h2 class="text-xl font-semibold mb-4">内容展示区域</h2>
+    <p class="text-gray-700">
+      这里展示选中分类 / 子分类下的具体内容，可以是文章列表、卡片网格或者分页内容。
+    </p>
+  </div>
 
 </body>
 </html>
