--- a/index.html
+++ b/index.html
@@ -142,9 +142,8 @@
           <a href="#new" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors py-2">New</a>
           <a href="about.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors py-2">About</a>
         </div>
-      </div>
-    </div>
-  </nav>
+        </div>
+    </nav>
 
   <!-- Hero Section -->
   <section class="hero-gradient text-white py-16 md:py-24">
@@ -517,6 +516,11 @@
 
  
    
+
+
+    
     <script type="module" src="/main.js"></script>
+    <!-- 搜索功能修复脚本 -->
+    <script src="/search-fix.js"></script>
   </body>
 </html>
