set-bookmark-to-star

--- a/free/detail/cloudflare-warp.html
+++ b/free/detail/cloudflare-warp.html
@@ -112,7 +112,7 @@
             
             <div class="flex items-center space-x-4">
                 <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-dark-card transition-colors relative">
-                    <i class="fa fa-bookmark-o text-gray-300 hover:text-primary"></i>
+                    <i class="fa fa-star-o text-gray-300 hover:text-primary"></i>
                 </button>
                 <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
     <i class="fa fa-search text-xl"></i>
@@ -1303,11 +1303,11 @@
                 isBookmarked = !isBookmarked;
                 
                 if (isBookmarked) {
-                    bookmarkBtn.innerHTML = '<i class="fa fa-bookmark text-primary"></i>';
+                    bookmarkBtn.innerHTML = '<i class="fa fa-star text-primary"></i>';
                     // 添加到收藏列表
                     addToBookmarkList();
                 } else {
-                    bookmarkBtn.innerHTML = '<i class="fa fa-bookmark-o text-gray-300 hover:text-primary"></i>';
+                    bookmarkBtn.innerHTML = '<i class="fa fa-star-o text-gray-300 hover:text-primary"></i>';
                     // 从收藏列表移除
                     removeFromBookmarkList();
                 }
@@ -1355,7 +1355,7 @@
                 // 添加删除收藏事件
                 bookmarkItem.querySelector('.remove-bookmark').addEventListener('click', function() {
                     isBookmarked = false;
-                    bookmarkBtn.innerHTML = '<i class="fa fa-bookmark-o text-gray-300 hover:text-primary"></i>';
+                    bookmarkBtn.innerHTML = '<i class="fa fa-star-o text-gray-300 hover:text-primary"></i>';
                     removeFromBookmarkList();
                 });
             }
