--- a/free/detail/copilot.html
+++ b/free/detail/copilot.html
@@ -126,7 +126,7 @@
                     
                     <!-- Bookmark Button -->
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors">
-                        <i class="fa fa-bookmark-o text-xl"></i>
+                        <i class="fa fa-star-o text-xl"></i>
                     </button>
                 </div>
                 
@@ -1048,13 +1048,13 @@
         // Toggle bookmark
         function toggleBookmark() {
             const icon = bookmarkBtn.querySelector('i');
-            if (icon.classList.contains('fa-bookmark-o')) {
-                icon.classList.remove('fa-bookmark-o');
-                icon.classList.add('fa-bookmark');
+            if (icon.classList.contains('fa-star-o')) {
+                icon.classList.remove('fa-star-o');
+                icon.classList.add('fa-star');
                 localStorage.setItem('copilot_bookmarked', 'true');
             } else {
-                icon.classList.remove('fa-bookmark');
-                icon.classList.add('fa-bookmark-o');
+                icon.classList.remove('fa-star');
+                icon.classList.add('fa-star-o');
                 localStorage.removeItem('copilot_bookmarked');
             }
         }
@@ -1063,8 +1063,8 @@
         function initBookmark() {
             if (localStorage.getItem('copilot_bookmarked') === 'true') {
                 const icon = bookmarkBtn.querySelector('i');
-                icon.classList.remove('fa-bookmark-o');
-                icon.classList.add('fa-bookmark');
+                icon.classList.remove('fa-star-o');
+                icon.classList.add('fa-star');
             }
         }
 
