--- a/free/detail/django.html
+++ b/free/detail/django.html
@@ -117,7 +117,7 @@
                         <i class="fa fa-share-alt"></i>
                     </button>
                     <button id="favoriteBtn" class="p-2 rounded-full hover:bg-dark-card transition-colors" aria-label="收藏">
-                        <i class="fa fa-heart-o"></i>
+                        <i class="fa fa-star-o"></i>
                     </button>
                     <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
     <i class="fa fa-search text-xl"></i>
@@ -914,13 +914,13 @@ urlpatterns = [
         // 收藏功能
         document.getElementById('favoriteBtn').addEventListener('click', function() {
             const icon = this.querySelector('i');
-            if (icon.classList.contains('fa-heart-o')) {
-                icon.classList.remove('fa-heart-o');
-                icon.classList.add('fa-heart');
+            if (icon.classList.contains('fa-star-o')) {
+                icon.classList.remove('fa-star-o');
+                icon.classList.add('fa-star');
                 icon.style.color = '#ef4444';
             } else {
-                icon.classList.remove('fa-heart');
-                icon.classList.add('fa-heart-o');
+                icon.classList.remove('fa-star');
+                icon.classList.add('fa-star-o');
                 icon.style.color = '';
             }
         });
