--- a/free/detail/eslint.html
+++ b/free/detail/eslint.html
@@ -117,7 +117,7 @@
                         <i class="fa fa-share-alt"></i>
                     </button>
                     <button id="favoriteBtn" class="p-2 rounded-full hover:bg-dark-card transition-colors" aria-label="收藏">
-                        <i class="fa fa-heart-o"></i>
+                        <i class="fa fa-star-o"></i>
                     </button>
                     <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
     <i class="fa fa-search text-xl"></i>
@@ -818,10 +818,10 @@ const result = calculateTotal(200, 6);</code></pre>
         favoriteBtn.addEventListener('click', () => {
             isFavorite = !isFavorite;
             if (isFavorite) {
-                favoriteBtn.innerHTML = '<i class="fa fa-heart text-red-500"></i>';
+                favoriteBtn.innerHTML = '<i class="fa fa-star text-red-500"></i>';
                 showToast('已添加到收藏');
             } else {
-                favoriteBtn.innerHTML = '<i class="fa fa-heart-o"></i>';
+                favoriteBtn.innerHTML = '<i class="fa fa-star-o"></i>';
                 showToast('已从收藏中移除');
             }
         });
