--- a/free/detail/excalidraw.html
+++ b/free/detail/excalidraw.html
@@ -160,7 +160,7 @@
                         <i class="fa fa-share-alt text-light-300"></i>
                     </button>
                     <button id="favorite-btn" class="p-2 rounded-full bg-dark-100 hover:bg-dark-200 transition-colors">
-                        <i class="fa fa-heart-o text-light-300"></i>
+                        <i class="fa fa-star-o text-light-300"></i>
                     </button>
                     <button class="md:hidden p-2 rounded-full bg-dark-100 hover:bg-dark-200 transition-colors">
                         <i class="fa fa-bars text-light-300"></i>
@@ -704,9 +704,9 @@
         
         document.getElementById('favorite-btn').addEventListener('click', function() {
             const icon = this.querySelector('i');
-            if (icon.classList.contains('fa-heart-o')) {
-                icon.classList.remove('fa-heart-o');
-                icon.classList.add('fa-heart');
+            if (icon.classList.contains('fa-star-o')) {
+                icon.classList.remove('fa-star-o');
+                icon.classList.add('fa-star');
                 icon.style.color = '#e53e3e';
                 
                 // 显示收藏成功提示
@@ -723,8 +723,8 @@
                     }, 500);
                 }, 2000);
             } else {
-                icon.classList.remove('fa-heart');
-                icon.classList.add('fa-heart-o');
+                icon.classList.remove('fa-star');
+                icon.classList.add('fa-star-o');
                 icon.style.color = '';
             }
         });
