--- a/free/detail/express.html
+++ b/free/detail/express.html
@@ -219,7 +219,7 @@
                     
                     <!-- 收藏按钮 -->
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-gray-800 transition-colors">
-                        <i class="fa fa-bookmark-o text-gray-400 hover:text-white"></i>
+                        <i class="fa fa-star-o text-gray-400 hover:text-white"></i>
                     </button>
                 </div>
             </div>
@@ -817,7 +817,7 @@ app.listen(port, () =&gt; {
             <div class="p-6" id="bookmarks-container">
                 <!-- 收藏内容将通过 JavaScript 动态显示 -->
                 <div class="text-center text-gray-400 py-12">
-                    <i class="fa fa-bookmark-o text-4xl mb-4"></i>
+                    <i class="fa fa-star-o text-4xl mb-4"></i>
                     <p>您还没有收藏任何资源</p>
                 </div>
             </div>
