--- a/free/detail/flutter.html
+++ b/free/detail/flutter.html
@@ -194,7 +194,7 @@
                     
                     <!-- Bookmark Button -->
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-light-200 dark:hover:bg-dark-100 transition-colors">
-                        <i class="fa fa-bookmark-o text-xl"></i>
+                        <i class="fa fa-star-o text-xl"></i>
                     </button>
                     
                     <!-- Share Button -->
@@ -1147,19 +1147,19 @@
 
         // Check if bookmarked
         if (localStorage.bookmarked === 'true') {
-            bookmarkIcon.classList.remove('fa-bookmark-o');
-            bookmarkIcon.classList.add('fa-bookmark');
+            bookmarkIcon.classList.remove('fa-star-o');
+            bookmarkIcon.classList.add('fa-star');
         }
 
         bookmarkBtn.addEventListener('click', () => {
-            if (bookmarkIcon.classList.contains('fa-bookmark-o')) {
-                bookmarkIcon.classList.remove('fa-bookmark-o');
-                bookmarkIcon.classList.add('fa-bookmark');
+            if (bookmarkIcon.classList.contains('fa-star-o')) {
+                bookmarkIcon.classList.remove('fa-star-o');
+                bookmarkIcon.classList.add('fa-star');
                 localStorage.bookmarked = 'true';
                 showNotification('Page bookmarked!');
             } else {
-                bookmarkIcon.classList.remove('fa-bookmark');
-                bookmarkIcon.classList.add('fa-bookmark-o');
+                bookmarkIcon.classList.remove('fa-star');
+                bookmarkIcon.classList.add('fa-star-o');
                 localStorage.bookmarked = 'false';
                 showNotification('Bookmark removed');
             }
