--- a/free/detail/gradio.html
+++ b/free/detail/gradio.html
@@ -115,7 +115,7 @@
                         <i class="fa fa-share-alt text-gray-300"></i>
                     </button>
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-gray-light/20 transition-colors">
-                        <i class="fa fa-bookmark-o text-gray-300"></i>
+                        <i class="fa fa-star-o text-gray-300"></i>
                     </button>
                     <!-- 移动端菜单按钮 -->
                     <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
@@ -1038,7 +1038,7 @@ Running on public URL: https://xxxx.gradio.app</code></pre>
             isBookmarked = !isBookmarked;
             
             if (isBookmarked) {
-                bookmarkBtn.innerHTML = '<i class="fa fa-bookmark text-primary"></i>';
+                bookmarkBtn.innerHTML = '<i class="fa fa-star text-primary"></i>';
                 // 显示提示
                 bookmarkToast.classList.remove('translate-y-20', 'opacity-0');
                 bookmarkToast.classList.add('translate-y-0', 'opacity-100');
@@ -1049,7 +1049,7 @@ Running on public URL: https://xxxx.gradio.app</code></pre>
                     bookmarkToast.classList.remove('translate-y-0', 'opacity-100');
                 }, 3000);
             } else {
-                bookmarkBtn.innerHTML = '<i class="fa fa-bookmark-o text-gray-300"></i>';
+                bookmarkBtn.innerHTML = '<i class="fa fa-star-o text-gray-300"></i>';
             }
         });
         
