--- a/free/detail/keystonejs.html
+++ b/free/detail/keystonejs.html
@@ -862,7 +862,7 @@ npm run dev
                     © 2023 KeystoneJS. All rights reserved.
                 </div>
                 <div class="text-sm text-gray-500 dark:text-gray-400">
-                    Made with <i class="fa fa-heart text-red-500"></i> by the KeystoneJS community
+                    Made with <i class="fa fa-star text-red-500"></i> by the KeystoneJS community
                 </div>
             </div>
         </div>
