--- a/free/detail/lottiefiles.html
+++ b/free/detail/lottiefiles.html
@@ -120,7 +120,7 @@
                     <!-- 功能按钮 -->
                     <div class="flex items-center space-x-4">
                         <button id="favoriteBtn" class="p-2 rounded-full hover:bg-white/10 transition-colors relative">
-                            <i class="fa fa-heart-o text-light/80 hover:text-accent transition-colors"></i>
+                            <i class="fa fa-star-o text-light/80 hover:text-accent transition-colors"></i>
                             <span class="absolute -top-1 -right-1 w-4 h-4 bg-accent rounded-full text-[10px] flex items-center justify-center text-white" id="favoriteCount">0</span>
                         </button>
                         <button id="shareBtn" class="p-2 rounded-full hover:bg-white/10 transition-colors">
@@ -885,12 +885,12 @@
             const icon = favoriteBtn.querySelector('i');
             
             if (isFavorite) {
-                icon.classList.remove('fa-heart-o');
-                icon.classList.add('fa-heart', 'text-accent');
+                icon.classList.remove('fa-star-o');
+                icon.classList.add('fa-star', 'text-accent');
                 count++;
             } else {
-                icon.classList.remove('fa-heart', 'text-accent');
-                icon.classList.add('fa-heart-o');
+                icon.classList.remove('fa-star', 'text-accent');
+                icon.classList.add('fa-star-o');
                 count--;
             }
             
