--- a/free/detail/mocha.html
+++ b/free/detail/mocha.html
@@ -758,7 +758,7 @@
 
     <!-- Bookmark Button (Fixed) -->
     <button id="bookmarkBtn" class="fixed right-6 top-20 bg-white dark:bg-dark-200 p-3 rounded-full shadow-lg z-30 hover:bg-light-300 dark:hover:bg-dark-100 transition-all">
-        <i class="fa fa-bookmark-o text-xl text-primary"></i>
+        <i class="fa fa-star-o text-xl text-primary"></i>
     </button>
 
     <!-- Share Button (Fixed) -->
@@ -864,19 +864,19 @@
 
         // Check if bookmarked
         if (localStorage.getItem('mochaBookmarked') === 'true') {
-            bookmarkIcon.classList.remove('fa-bookmark-o');
-            bookmarkIcon.classList.add('fa-bookmark');
+            bookmarkIcon.classList.remove('fa-star-o');
+            bookmarkIcon.classList.add('fa-star');
         }
 
         bookmarkBtn.addEventListener('click', () => {
-            if (bookmarkIcon.classList.contains('fa-bookmark-o')) {
-                bookmarkIcon.classList.remove('fa-bookmark-o');
-                bookmarkIcon.classList.add('fa-bookmark');
+            if (bookmarkIcon.classList.contains('fa-star-o')) {
+                bookmarkIcon.classList.remove('fa-star-o');
+                bookmarkIcon.classList.add('fa-star');
                 localStorage.setItem('mochaBookmarked', 'true');
                 showNotification('Page bookmarked!');
             } else {
-                bookmarkIcon.classList.remove('fa-bookmark');
-                bookmarkIcon.classList.add('fa-bookmark-o');
+                bookmarkIcon.classList.remove('fa-star');
+                bookmarkIcon.classList.add('fa-star-o');
                 localStorage.setItem('mochaBookmarked', 'false');
                 showNotification('Bookmark removed');
             }
