--- a/free/detail/nextjs.html
+++ b/free/detail/nextjs.html
@@ -133,7 +133,7 @@
 
                     <!-- Bookmark Button -->
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors">
-                        <i class="fa fa-bookmark-o text-xl"></i>
+                        <i class="fa fa-star-o text-xl"></i>
                     </button>
                 </div>
             </div>
@@ -1062,14 +1062,14 @@ document.getElementById('backToTop').addEventListener('click', () => {
 const bookmarkBtn = document.getElementById('bookmarkBtn');
 bookmarkBtn.addEventListener('click', () => {
     const icon = bookmarkBtn.querySelector('i');
-    if (icon.classList.contains('fa-bookmark-o')) {
-        icon.classList.remove('fa-bookmark-o');
-        icon.classList.add('fa-bookmark');
+    if (icon.classList.contains('fa-star-o')) {
+        icon.classList.remove('fa-star-o');
+        icon.classList.add('fa-star');
         // 显示收藏成功提示
         showNotification('Page bookmarked!');
     } else {
-        icon.classList.remove('fa-bookmark');
-        icon.classList.add('fa-bookmark-o');
+        icon.classList.remove('fa-star');
+        icon.classList.add('fa-star-o');
         // 显示取消收藏提示
         showNotification('Bookmark removed');
     }
