--- a/free/detail/postcss.html
+++ b/free/detail/postcss.html
@@ -802,7 +802,7 @@ module.exports = {
           <div class="flex flex-wrap justify-center gap-4 mb-8">
             <!-- 收藏按钮 -->
             <button id="bookmark-btn" class="flex items-center gap-2 px-6 py-3 bg-dark-900 border border-dark-700 rounded-lg font-medium hover:border-primary/50 transition-all">
-              <i class="fa fa-bookmark-o text-primary"></i>
+              <i class="fa fa-star-o text-primary"></i>
               <span>收藏资源</span>
             </button>
             
@@ -1513,10 +1513,10 @@ module.exports = {
       isBookmarked = !isBookmarked;
       
       if (isBookmarked) {
-        bookmarkBtn.innerHTML = '<i class="fa fa-bookmark text-primary"></i><span>已收藏</span>';
+        bookmarkBtn.innerHTML = '<i class="fa fa-star text-primary"></i><span>已收藏</span>';
         showNotification('已收藏该资源');
       } else {
-        bookmarkBtn.innerHTML = '<i class="fa fa-bookmark-o text-primary"></i><span>收藏资源</span>';
+        bookmarkBtn.innerHTML = '<i class="fa fa-star-o text-primary"></i><span>收藏资源</span>';
         showNotification('已取消收藏');
       }
     });
