--- a/free/detail/prometheus.html
+++ b/free/detail/prometheus.html
@@ -115,7 +115,7 @@
                 
                 <div class="flex items-center space-x-4">
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-dark-hover transition-colors" aria-label="收藏">
-                        <i class="fa fa-bookmark-o text-gray-300 hover:text-primary"></i>
+                        <i class="fa fa-star-o text-gray-300 hover:text-primary"></i>
                     </button>
                     
                     <div class="relative group">
