--- a/free/detail/replit.html
+++ b/free/detail/replit.html
@@ -204,7 +204,7 @@
                     <span class="tooltip-text">分享页面</span>
                 </button>
                 <button id="save-btn" class="tooltip w-10 h-10 rounded-full bg-dark-light flex items-center justify-center text-gray-300 hover:text-primary hover:bg-dark-lighter transition-all duration-300">
-                    <i class="fa fa-bookmark-o"></i>
+                    <i class="fa fa-star-o"></i>
                     <span class="tooltip-text">收藏页面</span>
                 </button>
             </div>
@@ -230,7 +230,7 @@
                         <i class="fa fa-share-alt"></i>
                     </button>
                     <button id="mobile-save-btn" class="w-10 h-10 rounded-full bg-dark-lighter flex items-center justify-center text-gray-300 hover:text-primary transition-all">
-                        <i class="fa fa-bookmark-o"></i>
+                        <i class="fa fa-star-o"></i>
                     </button>
                 </div>
                 <a href="https://replit.com" target="_blank" rel="noopener noreferrer" class="bg-primary hover:bg-primary/90 text-white px-5 py-3 rounded-lg text-center transition-all">访问官网</a>
