--- a/free/detail/sass.html
+++ b/free/detail/sass.html
@@ -141,7 +141,7 @@
                         <i class="fa fa-share-alt"></i>
                     </button>
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-light-gray/20 transition-colors" aria-label="收藏">
-                        <i class="fa fa-bookmark-o"></i>
+                        <i class="fa fa-star-o"></i>
                     </button>
                     <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
     <i class="fa fa-search text-xl"></i>
@@ -1146,10 +1146,10 @@ body {
             isBookmarked = !isBookmarked;
             
             if (isBookmarked) {
-                bookmarkBtn.innerHTML = '<i class="fa fa-bookmark"></i>';
+                bookmarkBtn.innerHTML = '<i class="fa fa-star"></i>';
                 showNotification('已添加到收藏', 'success');
             } else {
-                bookmarkBtn.innerHTML = '<i class="fa fa-bookmark-o"></i>';
+                bookmarkBtn.innerHTML = '<i class="fa fa-star-o"></i>';
                 showNotification('已从收藏中移除', 'info');
             }
         });
