--- a/free/detail/tailwind.html
+++ b/free/detail/tailwind.html
@@ -160,7 +160,7 @@
                     
                     <!-- Bookmark button -->
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-dark-card transition-colors relative">
-                        <i class="fa fa-bookmark-o text-gray-600 dark:text-gray-300"></i>
+                        <i class="fa fa-star-o text-gray-600 dark:text-gray-300"></i>
                         <span class="absolute -top-1 -right-1 w-4 h-4 bg-primary rounded-full text-white text-xs flex items-center justify-center opacity-0 invisible transition-all" id="bookmarkBadge">
                             <i class="fa fa-check text-[10px]"></i>
                         </span>
@@ -1008,14 +1008,14 @@ npx tailwindcss init</pre>
             isBookmarked = !isBookmarked;
             
             if (isBookmarked) {
-                bookmarkIcon.classList.remove('fa-bookmark-o');
-                bookmarkIcon.classList.add('fa-bookmark');
+                bookmarkIcon.classList.remove('fa-star-o');
+                bookmarkIcon.classList.add('fa-star');
                 bookmarkIcon.classList.add('text-primary');
                 bookmarkBadge.classList.remove('opacity-0', 'invisible');
                 bookmarkBadge.classList.add('opacity-100', 'visible');
             } else {
-                bookmarkIcon.classList.remove('fa-bookmark', 'text-primary');
-                bookmarkIcon.classList.add('fa-bookmark-o');
+                bookmarkIcon.classList.remove('fa-star', 'text-primary');
+                bookmarkIcon.classList.add('fa-star-o');
                 bookmarkBadge.classList.remove('opacity-100', 'visible');
                 bookmarkBadge.classList.add('opacity-0', 'invisible');
             }
