--- a/free/detail/trello.html
+++ b/free/detail/trello.html
@@ -106,7 +106,7 @@
             
             <div class="flex items-center space-x-4">
                 <button id="bookmarkBtn" class="text-gray-300 hover:text-primary transition-colors" aria-label="收藏">
-                    <i class="fa fa-bookmark-o text-xl" aria-hidden="true"></i>
+                    <i class="fa fa-star-o text-xl" aria-hidden="true"></i>
                 </button>
                 <button id="shareBtn" class="text-gray-300 hover:text-primary transition-colors" aria-label="分享">
                     <i class="fa fa-share-alt text-xl" aria-hidden="true"></i>
@@ -1286,13 +1286,13 @@
                 const icon = bookmarkBtn.querySelector('i');
                 
                 if (isBookmarked) {
-                    icon.classList.remove('fa-bookmark-o');
-                    icon.classList.add('fa-bookmark');
+                    icon.classList.remove('fa-star-o');
+                    icon.classList.add('fa-star');
                     icon.classList.add('text-primary');
                     showNotification('已添加到收藏', 'success');
                 } else {
-                    icon.classList.remove('fa-bookmark');
-                    icon.classList.add('fa-bookmark-o');
+                    icon.classList.remove('fa-star');
+                    icon.classList.add('fa-star-o');
                     icon.classList.remove('text-primary');
                     showNotification('已从收藏中移除', 'info');
                 }
