--- a/free/detail/unocss.html
+++ b/free/detail/unocss.html
@@ -682,7 +682,7 @@ import 'uno.css'</code></pre>
             
             <div class="border-t border-gray-200 dark:border-gray-800 pt-8 text-center text-gray-600 dark:text-gray-400 text-sm">
                 <p>© 2023 UnoCSS. All rights reserved.</p>
-                <p class="mt-2">Created with <i class="fa fa-heart text-accent"></i> by the open-source community.</p>
+                <p class="mt-2">Created with <i class="fa fa-star text-accent"></i> by the open-source community.</p>
             </div>
         </div>
     </footer>
