--- a/free/detail/vite.html
+++ b/free/detail/vite.html
@@ -908,7 +908,7 @@
 
     <!-- Bookmark Button -->
     <button id="bookmarkBtn" class="fixed right-6 top-24 bg-light-100 dark:bg-dark-700 p-3 rounded-full shadow-lg hover:bg-primary hover:text-white transition-all z-30">
-        <i class="fa fa-bookmark-o text-xl"></i>
+        <i class="fa fa-star-o text-xl"></i>
     </button>
 
     <!-- Share Button and Modal -->
@@ -1035,19 +1035,19 @@
         
         // Check if bookmarked
         if (localStorage.getItem('viteBookmarked') === 'true') {
-            bookmarkIcon.classList.remove('fa-bookmark-o');
-            bookmarkIcon.classList.add('fa-bookmark');
+            bookmarkIcon.classList.remove('fa-star-o');
+            bookmarkIcon.classList.add('fa-star');
         }
         
         bookmarkBtn.addEventListener('click', () => {
-            if (bookmarkIcon.classList.contains('fa-bookmark-o')) {
-                bookmarkIcon.classList.remove('fa-bookmark-o');
-                bookmarkIcon.classList.add('fa-bookmark');
+            if (bookmarkIcon.classList.contains('fa-star-o')) {
+                bookmarkIcon.classList.remove('fa-star-o');
+                bookmarkIcon.classList.add('fa-star');
                 localStorage.setItem('viteBookmarked', 'true');
                 showNotification('Page bookmarked!');
             } else {
-                bookmarkIcon.classList.remove('fa-bookmark');
-                bookmarkIcon.classList.add('fa-bookmark-o');
+                bookmarkIcon.classList.remove('fa-star');
+                bookmarkIcon.classList.add('fa-star-o');
                 localStorage.setItem('viteBookmarked', 'false');
                 showNotification('Bookmark removed');
             }
