--- a/free/detail/vue.html
+++ b/free/detail/vue.html
@@ -154,7 +154,7 @@
                     
                     <!-- Bookmark Button -->
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors">
-                        <i class="fa fa-bookmark-o text-xl"></i>
+                        <i class="fa fa-star-o text-xl"></i>
                     </button>
                 </div>
                 
@@ -798,14 +798,14 @@
         // Bookmark button functionality
         document.getElementById('bookmarkBtn').addEventListener('click', function() {
             const icon = this.querySelector('i');
-            if (icon.classList.contains('fa-bookmark-o')) {
-                icon.classList.remove('fa-bookmark-o');
-                icon.classList.add('fa-bookmark');
+            if (icon.classList.contains('fa-star-o')) {
+                icon.classList.remove('fa-star-o');
+                icon.classList.add('fa-star');
                 // Show a notification or perform actual bookmarking logic
                 alert('Page bookmarked!');
             } else {
-                icon.classList.remove('fa-bookmark');
-                icon.classList.add('fa-bookmark-o');
+                icon.classList.remove('fa-star');
+                icon.classList.add('fa-star-o');
                 alert('Bookmark removed!');
             }
         });
