--- a/hello/detail/discover.html
+++ b/hello/detail/discover.html
@@ -621,7 +621,7 @@
               <div class="bg-white dark:bg-gray-800 p-4 rounded-lg border border-gray-200 dark:border-gray-600 hover:border-discover-primary/30 transition-colors">
                 <div class="flex items-center mb-2">
                   <div class="w-8 h-8 rounded-full bg-discover-primary/10 flex items-center justify-center mr-3 flex-shrink-0">
-                    <i class="fa fa-heart text-discover-primary"></i>
+                    <i class="fa fa-star text-discover-primary"></i>
                   </div>
                   <h4 class="font-medium text-gray-800 dark:text-white">个人发现语境</h4>
                 </div>
