--- a/hello/detail/elevate.html
+++ b/hello/detail/elevate.html
@@ -602,7 +602,7 @@
               
               <div class="p-4 bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-600">
                 <div class="flex items-center mb-3">
-                  <i class="fa fa-heart text-elevate-main mr-2"></i>
+                  <i class="fa fa-star text-elevate-main mr-2"></i>
                   <h4 class="font-medium text-gray-800 dark:text-white text-sm">个人成长</h4>
                 </div>
                 <p class="text-gray-600 dark:text-gray-400 text-xs">
