--- a/hello/detail/empower.html
+++ b/hello/detail/empower.html
@@ -214,7 +214,7 @@
           </button>
           
           <button class="hidden md:block px-4 py-2 rounded-full bg-word-primary/20 border border-word-primary/50 hover:bg-word-primary/30 transition-all">
-            <i class="fa fa-bookmark mr-2"></i>收藏
+            <i class="fa fa-star mr-2"></i>收藏
           </button>
         </div>
       </div>
