--- a/hello/detail/explore.html
+++ b/hello/detail/explore.html
@@ -276,7 +276,7 @@
               </svg>
             </div>
             <button class="w-full bg-primary hover:bg-primary/90 text-white py-2.5 px-4 rounded-lg transition-colors text-sm font-medium flex items-center justify-center shadow-sm shadow-primary/20 hover-lift">
-              <i class="fa fa-bookmark-o mr-2"></i> 添加到单词本
+              <i class="fa fa-star-o mr-2"></i> 添加到单词本
             </button>
           </div>
         </div>
