--- a/hello/detail/imagine.html
+++ b/hello/detail/imagine.html
@@ -91,7 +91,7 @@
                     <i class="fa fa-search text-lg"></i>
                 </button>
                 <button class="text-neutral hover:text-primary transition-colors">
-                    <i class="fa fa-bookmark-o text-lg"></i>
+                    <i class="fa fa-star-o text-lg"></i>
                 </button>
             </div>
         </div>
