--- a/hello/detail/invent.html
+++ b/hello/detail/invent.html
@@ -295,7 +295,7 @@
             </div>
             <div class="space-y-2">
               <button class="w-full bg-primary hover:bg-primary/90 text-white py-2.5 px-4 rounded-lg transition-colors text-sm font-medium flex items-center justify-center shadow-sm shadow-primary/20">
-                <i class="fa fa-bookmark-o mr-2"></i> 添加到学习计划
+                <i class="fa fa-star-o mr-2"></i> 添加到学习计划
               </button>
               <button class="w-full bg-white dark:bg-neutral-700 border border-neutral-300 dark:border-neutral-600 hover:bg-neutral-50 dark:hover:bg-neutral-600 text-neutral-700 dark:text-neutral-300 py-2.5 px-4 rounded-lg transition-colors text-sm font-medium flex items-center justify-center">
                 <i class="fa fa-share-alt mr-2"></i> 分享
