--- a/hello/detail/motivate.html
+++ b/hello/detail/motivate.html
@@ -374,7 +374,7 @@
                 </div>
                 <div class="flex items-center">
                   <span class="inline-flex items-center justify-center w-8 h-8 rounded-full bg-medical-primary/10 text-medical-primary mr-3">
-                    <i class="fa fa-heartbeat"></i>
+                    <i class="fa fa-starbeat"></i>
                   </span>
                   <span>心理学：激发个人内在动力</span>
                 </div>
