--- a/free/detail/asana.html
+++ b/free/detail/asana.html
@@ -116,7 +116,7 @@
                     <i class="fa fa-share-alt"></i>
                 </button>
                 <button id="bookmarkBtn" class="p-2 text-gray-300 hover:text-primary transition-colors" aria-label="收藏">
-                    <i class="fa fa-bookmark-o"></i>
+                    <i class="fa fa-star-o"></i>
                 </button>
                 <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
     <i class="fa fa-search text-xl"></i>
@@ -790,7 +790,7 @@
         bookmarkBtn.addEventListener('click', () => {
             isBookmarked = !isBookmarked;
             if (isBookmarked) {
-                bookmarkBtn.innerHTML = '<i class="fa fa-bookmark"></i>';
+                bookmarkBtn.innerHTML = '<i class="fa fa-star"></i>';
                 bookmarkBtn.classList.add('text-primary');
                 
                 // 显示提示
@@ -805,7 +805,7 @@
                     bookmarkToast.classList.add('translate-y-20', 'opacity-0');
                 }, 3000);
             } else {
-                bookmarkBtn.innerHTML = '<i class="fa fa-bookmark-o"></i>';
+                bookmarkBtn.innerHTML = '<i class="fa fa-star-o"></i>';
                 bookmarkBtn.classList.remove('text-primary');
             }
         });
