--- a/free/detail/deepseek.html
+++ b/free/detail/deepseek.html
@@ -808,7 +808,7 @@
     <div class="fixed bottom-6 right-6 flex flex-col gap-4 z-30">
         <!-- Bookmark Button -->
         <button id="bookmarkBtn" class="w-12 h-12 rounded-full bg-white dark:bg-dark-card shadow-lg flex items-center justify-center text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-dark-primary transition-custom">
-            <i class="fa fa-bookmark-o text-xl"></i>
+            <i class="fa fa-star-o text-xl"></i>
         </button>
         
         <!-- Share Button -->
@@ -953,13 +953,13 @@
             const icon = bookmarkBtn.querySelector('i');
             
             if (isBookmarked) {
-                icon.classList.remove('fa-bookmark-o');
-                icon.classList.add('fa-bookmark');
+                icon.classList.remove('fa-star-o');
+                icon.classList.add('fa-star');
                 bookmarkBtn.classList.add('text-primary', 'dark:text-dark-primary');
                 showNotification('Added to bookmarks');
             } else {
-                icon.classList.remove('fa-bookmark');
-                icon.classList.add('fa-bookmark-o');
+                icon.classList.remove('fa-star');
+                icon.classList.add('fa-star-o');
                 bookmarkBtn.classList.remove('text-primary', 'dark:text-dark-primary');
                 showNotification('Removed from bookmarks');
             }
