--- a/free/detail/gitlab.html
+++ b/free/detail/gitlab.html
@@ -1003,7 +1003,7 @@
             
             <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center">
                 <p>© 2023 GitLab. All rights reserved.</p>
-                <p class="mt-4 md:mt-0">Designed with <i class="fa fa-heart text-red-500"></i> for developers worldwide</p>
+                <p class="mt-4 md:mt-0">Designed with <i class="fa fa-star text-red-500"></i> for developers worldwide</p>
             </div>
         </div>
     </footer>
