--- a/free/detail/glitch.html
+++ b/free/detail/glitch.html
@@ -238,7 +238,7 @@
                     <span class="tooltip-text">分享页面</span>
                 </button>
                 <button id="save-btn" class="tooltip w-10 h-10 rounded-full bg-dark-light flex items-center justify-center text-gray-300 hover:text-primary hover:bg-dark-lighter transition-all duration-300 btn-ripple">
-                    <i class="fa fa-bookmark-o"></i>
+                    <i class="fa fa-star-o"></i>
                     <span class="tooltip-text">收藏页面</span>
                 </button>
             </div>
@@ -264,7 +264,7 @@
                         <i class="fa fa-share-alt"></i>
                     </button>
                     <button id="mobile-save-btn" class="w-10 h-10 rounded-full bg-dark-lighter flex items-center justify-center text-gray-300 hover:text-primary transition-all btn-ripple">
-                        <i class="fa fa-bookmark-o"></i>
+                        <i class="fa fa-star-o"></i>
                     </button>
                 </div>
                 <a href="https://glitch.com" target="_blank" rel="noopener noreferrer" class="bg-gradient-to-r from-primary to-secondary text-white px-5 py-3 rounded-lg text-center transition-all btn-ripple">访问官网</a>
@@ -1455,7 +1455,7 @@
         saveButtons.forEach(btn => {
             if (btn) {
                 btn.addEventListener('click', function() {
-                    this.innerHTML = '<i class="fa fa-bookmark"></i>';
+                    this.innerHTML = '<i class="fa fa-star"></i>';
                     alert('已收藏此页面！');
                 });
             }
