--- a/free/detail/grafana.html
+++ b/free/detail/grafana.html
@@ -115,7 +115,7 @@
                 
                 <div class="flex items-center space-x-4">
                     <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-primary/20 transition-colors" aria-label="收藏">
-                        <i class="fa fa-bookmark-o text-lg"></i>
+                        <i class="fa fa-star-o text-lg"></i>
                     </button>
                     
                     <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
@@ -1162,7 +1162,7 @@
                             </div>
                             <div class="mt-6">
                                 <button id="bookmarkBtn" class="flex items-center text-primary hover:text-primary/80 transition-colors">
-                                    <i class="fa fa-bookmark-o mr-2"></i>
+                                    <i class="fa fa-star-o mr-2"></i>
                                     <span>收藏本文</span>
                                 </button>
                             </div>
