--- a/free/detail/layui.html
+++ b/free/detail/layui.html
@@ -137,7 +137,7 @@
             
             <div class="flex items-center space-x-4">
                 <button id="bookmarkBtn" class="p-2 rounded-full hover:bg-dark-hover transition-colors" title="收藏">
-                    <i class="fa fa-bookmark-o"></i>
+                    <i class="fa fa-star-o"></i>
                 </button>
                 <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
     <i class="fa fa-search text-xl"></i>
@@ -831,7 +831,7 @@ layui.use(['element', 'layer'], function(){
                 <div class="max-w-5xl mx-auto flex flex-col md:flex-row justify-between items-center gap-6">
                     <div class="flex items-center">
                         <button id="bookmarkBtn" class="flex items-center px-4 py-2 bg-dark-card hover:bg-dark-hover rounded-lg transition-all border border-gray-700 mr-4">
-                            <i class="fa fa-bookmark-o mr-2"></i>
+                            <i class="fa fa-star-o mr-2"></i>
                             <span>收藏本文</span>
                         </button>
                         <div id="bookmarkList" class="hidden"></div>
