--- a/free/detail/linux.html
+++ b/free/detail/linux.html
@@ -108,7 +108,7 @@
             
             <div class="flex items-center space-x-4">
                 <button id="favoriteBtn" class="p-2 rounded-full hover:bg-white/10 transition-colors" aria-label="收藏">
-                    <i class="fa fa-heart-o text-xl"></i>
+                    <i class="fa fa-star-o text-xl"></i>
                 </button>
                 <button id="shareBtn" class="p-2 rounded-full hover:bg-white/10 transition-colors" aria-label="分享">
                     <i class="fa fa-share-alt text-xl"></i>
@@ -773,7 +773,7 @@
 
     <!-- 收藏成功提示 -->
     <div id="favoriteToast" class="fixed bottom-6 right-6 bg-dark border border-gray-800 rounded-lg p-4 shadow-xl transform translate-y-20 opacity-0 transition-all z-50 flex items-center">
-        <i class="fa fa-heart text-red-500 mr-3 text-xl"></i>
+        <i class="fa fa-star text-red-500 mr-3 text-xl"></i>
         <span>已添加到收藏夹！</span>
     </div>
 
@@ -831,10 +831,10 @@
         favoriteBtn.addEventListener('click', () => {
             isFavorite = !isFavorite;
             if (isFavorite) {
-                favoriteBtn.innerHTML = '<i class="fa fa-heart text-xl text-red-500"></i>';
+                favoriteBtn.innerHTML = '<i class="fa fa-star text-xl text-red-500"></i>';
                 showToast(favoriteToast);
             } else {
-                favoriteBtn.innerHTML = '<i class="fa fa-heart-o text-xl"></i>';
+                favoriteBtn.innerHTML = '<i class="fa fa-star-o text-xl"></i>';
             }
         });
         
