--- a/free/detail/supabase.html
+++ b/free/detail/supabase.html
@@ -498,7 +498,7 @@
         <div class="space-y-4">
           <div class="flex items-start">
             <div class="flex-shrink-0 bg-success/10 p-2 rounded-full mt-0.5 mr-3">
-              <i class="fa fa-heartbeat text-success text-sm"></i>
+              <i class="fa fa-starbeat text-success text-sm"></i>
             </div>
             <div>
               <h4 class="font-medium mb-1">保持项目活跃</h4>
