--- a/free/detail/svelte.html
+++ b/free/detail/svelte.html
@@ -785,7 +785,7 @@
                     &copy; 2023 Svelte. All rights reserved.
                 </p>
                 <p class="text-gray-500 dark:text-gray-400 text-sm">
-                    Made with <i class="fa fa-heart text-red-500"></i> by the Svelte community
+                    Made with <i class="fa fa-star text-red-500"></i> by the Svelte community
                 </p>
             </div>
         </div>
