--- a/free/detail/unsplash.html
+++ b/free/detail/unsplash.html
@@ -144,7 +144,7 @@
                 <div class="grid md:grid-cols-2 gap-10 mb-16">
                     <div class="bg-dark-gray rounded-xl p-6 shadow-lg border border-light-gray/10 hover:border-accent/30 transition-custom">
                         <div class="text-accent text-3xl mb-4">
-                            <i class="fa fa-bookmark"></i>
+                            <i class="fa fa-star"></i>
                         </div>
                         <h3 class="text-xl font-semibold mb-4 text-white">名称来历</h3>
                         <p class="text-gray-300 leading-relaxed">
