--- a/free/detail/vitest.html
+++ b/free/detail/vitest.html
@@ -129,7 +129,7 @@
                             <i class="fa fa-share-alt text-gray-300"></i>
                         </button>
                         <button id="favoriteBtn" class="p-2 rounded-full hover:bg-dark-hover transition-colors">
-                            <i class="fa fa-heart-o text-gray-300"></i>
+                            <i class="fa fa-star-o text-gray-300"></i>
                         </button>
                         <!-- 移动端菜单按钮 -->
                         <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
@@ -804,10 +804,10 @@ describe(<span class="text-yellow-400">'数学函数测试'</span>, () =&gt; {
         favoriteBtn.addEventListener('click', () => {
             isFavorite = !isFavorite;
             if (isFavorite) {
-                favoriteBtn.innerHTML = '<i class="fa fa-heart text-red-500"></i>';
+                favoriteBtn.innerHTML = '<i class="fa fa-star text-red-500"></i>';
                 showNotification('已添加到收藏');
             } else {
-                favoriteBtn.innerHTML = '<i class="fa fa-heart-o text-gray-300"></i>';
+                favoriteBtn.innerHTML = '<i class="fa fa-star-o text-gray-300"></i>';
                 showNotification('已从收藏中移除');
             }
         });
