--- a/free/detail/yarn.html
+++ b/free/detail/yarn.html
@@ -107,7 +107,7 @@
                     <i class="fa fa-share-alt text-gray-300"></i>
                 </button>
                 <button id="favoriteBtn" class="p-2 rounded-full hover:bg-gray-800 transition-colors">
-                    <i class="fa fa-heart-o text-gray-300"></i>
+                    <i class="fa fa-star-o text-gray-300"></i>
                 </button>
                 <button id="mobileSearchBtn" class="md:hidden text-gray-500 hover:text-primary ml-2">
     <i class="fa fa-search text-xl"></i>
@@ -903,10 +903,10 @@
             isFavorite = !isFavorite;
             
             if (isFavorite) {
-                favoriteBtn.innerHTML = '<i class="fa fa-heart text-accent"></i>';
+                favoriteBtn.innerHTML = '<i class="fa fa-star text-accent"></i>';
                 showNotification('已添加到收藏');
             } else {
-                favoriteBtn.innerHTML = '<i class="fa fa-heart-o text-gray-300"></i>';
+                favoriteBtn.innerHTML = '<i class="fa fa-star-o text-gray-300"></i>';
                 showNotification('已从收藏中移除');
             }
         });
