--- a/hello/detail/enlighten.html
+++ b/hello/detail/enlighten.html
@@ -699,7 +699,7 @@
             <div class="p-5 bg-gray-50 dark:bg-gray-700/30 rounded-xl border border-gray-100 dark:border-gray-700 hover:shadow-lg transition-shadow duration-300">
               <div class="flex items-center mb-4">
                 <div class="w-10 h-10 rounded-full bg-light-primary/10 flex items-center justify-center mr-3">
-                  <i class="fa fa-heart-o text-light-primary"></i>
+                  <i class="fa fa-star-o text-light-primary"></i>
                 </div>
                 <h3 class="text-lg font-semibold text-gray-800 dark:text-white">精神与觉悟</h3>
               </div>
