--- a/free/index.html
+++ b/free/index.html
@@ -473,8 +473,8 @@
     // 加载工具数据
     async function loadToolsData() {
       try {
-        // 使用fetch从tools.json文件读取数据
-        const response = await fetch('/tools.json');
+        // 使用fetch从正确的路径加载数据
+        const response = await fetch('/assets/data/data.json');
         // 检查响应状态
         if (!response.ok) {
           throw new Error(`HTTP error! Status: ${response.status}`);
@@ -488,7 +488,8 @@
         return [
           {"file":"react","name":"React","category":"Frontend","tags":["Framework","JavaScript","UI"],"popularity":1},
           {"file":"vue","name":"Vue","category":"Frontend","tags":["Framework","JavaScript"],"popularity":1},
-          {"file":"tailwind","name":"Tailwind","category":"Frontend","tags":["UI Framework","CSS Tools"],"popularity":1}
+          {"file":"tailwind","name":"Tailwind","category":"Frontend","tags":["UI Framework","CSS Tools"],"popularity":1},
+          {"file":"redis","name":"Redis","category":"Database","tags":["Cache","NoSQL"],"popularity":1}
         ];
       }
     }
